added file to upload data on aws s3

--- a/app/views/hockey_teams/index.html.erb
+++ b/app/views/hockey_teams/index.html.erb
@@ -2,6 +2,11 @@
 
 <%= button_to "Scrape data", scrape_hockey_teams_path %>
 <br>
+<%= button_to "Upload data", upload_hockey_teams_path %>
+<br>
+<%= button_to "get link to download", download_hockey_teams_path %>
+<br>
+<hr>
 <%= link_to "New hockey team", new_hockey_team_path %>
 
 <h1>Hockey teams</h1>
